--- a/projecttask4/index.html
+++ b/projecttask4/index.html
@@ -1,65 +1,81 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>Form a Story</title>
-  </head>
-  <body>
-    <section id="top">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html-forms/formAStoryLogo.svg" alt="Form A Story Logo">
-    </section>
 
-    <section id="main">
-      <h1>Complete the Form -<br> Complete the Story!</h1>
-      <hr>
-      <!--Add your form below:-->
-      
-        <form action="story.html" method="GET"> 
-            <label for="animal-1">animal:</label>
-            <input id="animal-1" type="animal-1" required>
-            <br>
-            <label for="animal-2">Another Animal:</label>
-            <input id="animal-2" name="animal-2" type="text" required>
-            <br>
-            <label for="animal-3">One More Animal:</label>
-            <input id="animal-3" name="animal-3" type="text" required>
-            <br>
-            <label for="adj-1">Adjective (past tense):</label>
-            <input id="adj-1" name="adj-1" type="text" required>
-            <br>
-            <label for="verb-1">text Verb (ends in -ing):</label>
-            <input id="verb-1" name="verb-1" type="text" required>
-            <br>
-            <label for="num-1">Number:</label>
-            <input id="num-1" name="num-1" type="number" required>
-            <br>
-            <span>
-                Yes or No:
-            </span>
-            <input id="yes" type="radio" name="answer" value="yes" required>
-            <label for="yes">yes</label>
-            <input id="no" type="radio" name="answer" value="no">
-            <label for="no">No</label>
-            <br>
-            <label for="speed">Relative speed (ends in -er):</label>
-            <select id="speed" required>
-                <option value="faster">Faster</option>
-                <option value="quicker">quicker</option>
-            </select>
-            <br>
-            <label for="quote">Movitional Quote</label>
-            <input id="quote" type="text" required list="quote-choices">
-            <datalist id="quote-choices"></datalist>
-            <br>
-            <option value="winner gets ice cream!"></option>
-            <option value="winner gets food!"></option>
-            <input type="button" value="Form My Story!">
-            <label for="message">Meaningful Message:</label>
-            <textarea id="message" name="message" required rows="8" cols="40"> </textarea>
-            <br>
-        </form>
-    </section>
-    </body>
+<!DOCTYPE html>
+<html>
+   <head>
+      <link rel="stylesheet" href="style.css">
+   </head>
+<body>
+    <nav>
+        <ul>
+            <li>
+                <a href="#Blog">Blog</a>    
+                   </li>
+            <li>
+                <a href="#Media">Media</a>
+            </li>
+            <li>
+               <a href="#About">About</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <h1>
+            New York City
+        </h1>
+    </header>
+    <main>
+        <section id="blog">
+            <article>
+                <p>
+                    New York City is made up of five boroughs which include Queens, Manhattan, Brooklyn, the Bronx, and Staten Island. The city is the home of approximately 8 million people. In 1876, France gifted the City of New York what is known as the Statue of Liberty, which is currently located on Ellis Island commonly visited by tourists. However, it took 10 years to assemble and therefore wasn’t unveiled until 1886. Another tourist destination is Times Square. Times Square is commonly known for the big buildings, Broadway shows, and bright neon signs. This famous location was named after The New York Times after the Times moved to that location. Prior to that, it was named Longacre Square. New York City is also known for its bridges that connect the boroughs and allow ease of transportation.>
+                </p>
+            </article>
+        </section>
+        <figure>
+            <img src="https://codecademy-content.s3.amazonaws.com/courses/Semantic+HTML/statue-of-liberty.jpeg">
+            <figcaption>
+                This is the Statue of Liberty, a popular tourist attraction located on Ellis Island.>
+            </figcaption>
+        </figure>
+        <aside>
+            <p>
+                New York City is very popular for the variety of great food it has. Some of the top food items in NYC include:>
+            </p>
+        <ol>
+            <li>pizza</li>
+            <li>Bagels</li>
+            <li>burgers and sandwiches</li>
+            <li>Ramen</li>
+            <li>Tacos</li>
+            <li>pasta</li>
+            <li>Desserts</li>
+
+        </ol>
+        </aside>
+        <section id="media">
+            <article>
+                <h2>
+                    The Scenery in NYC
+                </h2>
+                <p>
+                    While the view in the city is beautiful, the sounds are not as lovely. Below you'll see an example of the view and the sounds you'll deal with in NYC on a daily basis.
+                </p>
+            </article>
+            <video controls src="https://codecademy-content.s3.amazonaws.com/courses/Semantic+HTML/nyc-skyline-timelapse.mp4">
+            </video>
+            <embed src="https://codecademy-content.s3.amazonaws.com/courses/Semantic+HTML/nyc-skyline.jpeg">
+                <audio controls src="https://codecademy-content.s3.amazonaws.com/courses/Semantic+HTML/nyc-sounds.mov"></audio>
+        </section>
+    </main>
+    <footer id="about">
+        <p>
+            Posted by: bharath
+        </p>
+        <p>
+            Contact information: Blogger@NYC.com
+        </p>
+    </footer>
+    
+
+</body>
 </html>
